# otus-srvroadsignsdetection

./: CMakeLists.txt  CommandLine.cpp  CommandLine.hpp  FrameOptions.cpp  FrameOptions.h  General.h  JSONBase.cpp  JSONBase.h  ReadMe.txt  Utils.h  main.cpp
AMQP/: AMQP.cpp  AMQPMessage.cpp  AMQPQueue.cpp  AMQPcpp.h
SignDetector/: CommandLine.hpp  ImageConverter.cpp  ImageConverter.h  SignDetector.cpp  SignDetector.h  Utils.h
